用户界面发送指令

--- a/代码/APP/app/src/main/AndroidManifest.xml
+++ b/代码/APP/app/src/main/AndroidManifest.xml
@@ -12,25 +12,33 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".Grab"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".Menu">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
         <activity
             android:name=".Navga"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".Menu">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
         <activity
             android:name=".CtrlWin"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".Menu">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <activity
+            android:name=".Menu"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name=".Menu"
+                android:value=".MainActivity" />
+        </activity>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
